feat: package.json type

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "根据当前的项目（目前先只支持前端项目）会阅读package.json还有其他东西，生成一份.cursorrules文件",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "tsx ./index.ts",
     "build": "tsup",
